doctors' appointment functionality added